[package]
name = "sniper-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
sniper-common = { path = "../sniper-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "sniper"
path = "src/main.rs"
